--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     </header>
 
     <section class="hero">
-        <div class="background-image" style="background-image: url(assets/images/main.jpg);"></div>
+        <video class="background-video" autoplay loop>
+            <source src="assets/video/openingVideo.mp4" type="video/mp4">
+        </video>
+        <!-- <div class="background-image" style="background-image: url(assets/images/main.jpg);"></div> -->
         <div class="hero-content">
             <h1>SkyHigh Tours</h1>
             <h3>Unmissable Adventure Tours Around The World</h3>
