--- a/index.html
+++ b/index.html
@@ -24,14 +24,10 @@
     </header>
 
     <section class="hero">
-        <!--
-            Video worked properly on localhost but wasnt supported on gh-pages
-
              <video class="background-video" autoplay loop>
             <source src="assets/video/openingVideo.mp4" type="video/mp4">
         </video> 
-    -->
-        <div class="background-image" style="background-image: url(assets/images/main.jpg);"></div>
+        <!-- <div class="background-image" style="background-image: url(assets/images/main.jpg);"></div> -->
         <div class="hero-content">
             <h1>SkyHigh Tours</h1>
             <h3>Unmissable Adventure Tours Around The World</h3>
