--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section class="hero">
              <video class="background-video" autoplay loop>
-            <source src="assets/video/openingVideo.mp4" type="video/mp4">
+            <source src="assets/video/openingVideo.webm" type="video/mp4">
         </video> 
         <!-- <div class="background-image" style="background-image: url(assets/images/main.jpg);"></div> -->
         <div class="hero-content">
